Fix margins and right side alignment, fix right-side padding

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ body {
     gap: 16px;
     display: flex;
     align-items: center;
+    padding-right: 70px;
 }
 
 /* Individual link styles */
@@ -98,6 +99,7 @@ a {
 .right-side {
     display: flex;
     margin-left: auto;
+    padding-right: 70px;
 }
 
 /*Mid-text styling */
@@ -127,6 +129,7 @@ a {
     display: flex;
     margin-top: 50px;;
     padding-left: 70px;
+    padding-right: 70px;
     gap: 30px;
     justify-content: space-around;
 }
@@ -165,6 +168,8 @@ figcaption {
 
 .quote-credit {
     margin-left: auto;
+    font-weight: bold;
+    font-size: 18px;
 
 }
 
@@ -197,4 +202,23 @@ figcaption {
 .ad-description {
     color: #F9FAF8;
     font-size: 14px;
+}
+
+/*Ad button styling */
+.ad-button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border: solid 2px;
+    padding: 6px 17px;
+    border-radius: 6px;
+}
+
+/*Footer styling */
+.footer {
+    background-color: #1F2937;
+    color: #F9FAF8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 36px;
 }
